--- a/index.html
+++ b/index.html
@@ -1,5 +1,72 @@
-<html>
-  <body>
-    <iframe src="https://github.com/Nitlus/nitlus.github.io/blob/main/Lucas%20Sifon%20Curriculum%20Vitae.pdf" width="100%" height="100%" style="border:none;"></iframe>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curriculum Vitae - Lucas Sifon</title>
+  <meta name="description" content="CV de Lucas Sifon - Ingeniero/Desarrollador"> <style>
+    /* Reseteo básico para eliminar bordes blancos del navegador */
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden; /* Evita doble barra de desplazamiento */
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    /* Barra superior simple y profesional */
+    header {
+      background-color: #2c3e50; /* Color oscuro profesional */
+      color: white;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+
+    h1 {
+      font-size: 1.2rem;
+      margin: 0;
+      font-weight: 500;
+    }
+
+    /* Botón de descarga estilizado */
+    .btn-download {
+      text-decoration: none;
+      background-color: #27ae60;
+      color: white;
+      padding: 8px 15px;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .btn-download:hover {
+      background-color: #219150;
+    }
+
+    /* Contenedor del PDF */
+    .pdf-container {
+      width: 100%;
+      height: calc(100% - 50px); /* Resta la altura del header */
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Lucas Sifon - CV</h1>
+    <a href="cv.pdf" download class="btn-download">Descargar PDF</a>
+  </header>
+
+  <iframe src="cv.pdf" class="pdf-container" frameborder="0">
+    <p>Tu navegador no puede mostrar este PDF. 
+    <a href="cv.pdf">Haz clic aquí para descargarlo.</a></p>
+  </iframe>
+
+</body>
 </html>
